--- a/bookland-frontend/src/index.css
+++ b/bookland-frontend/src/index.css
@@ -23,6 +23,7 @@ code {
 .navbarAvatarStyle {
     float: right;
     top: 5px;
+    min-width: 40px;
 }
 
 .mainPartStyle {
@@ -55,13 +56,59 @@ code {
 
 .nameStyle {
     float: right;
-    margin-top: 18%;
+    display: flex;
+    align-items: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
-.blockAuthAndReg {
+.mainBlockStyle{
     background-color: white;
     padding-left: 1%;
     padding-right: 1%;
     border-radius: 15px
+}
+
+.mainBodyStyle{
+    margin: 2vh 5% 2vh 5%;
+    display: flex;
+}
+
+.imageField {
+    background-color: #F5F5F5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 152px;
+    height: 152px;
+    border-radius: 15px;
+}
+
+.imageField.Drag {
+    filter: drop-shadow(0 0 5px #7146bd);
+}
+
+.addImageButton{
+    width: 100px;
+    float: right;
+}
+
+.mainBlogStyle{
+    padding-top: 1.5vh;
+    padding-bottom: 1.5vh;
+    width: 100%;
+    display: flex;
+}
+
+.ArticlesGrid{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    margin-left: 1vh;
+}
+
+.mainCardsStyle{
+    height: 300px;
+    background-color: #F5F5F5;
+    margin-right: 1.5vh;
+    margin-bottom: 1.5vh;
 }
