--- a/bookland-frontend/src/index.css
+++ b/bookland-frontend/src/index.css
@@ -11,6 +11,15 @@ code {
     monospace;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: #7146bd;
+  }
+
 .navbarMainStyle {
     font-size: 20px;
     display: flex;
@@ -27,7 +36,7 @@ code {
 }
 
 .mainPartStyle {
-    padding-top: 1px;
+    padding-top: 50px;
 }
 
 .center{
@@ -72,7 +81,6 @@ code {
 .mainBodyStyle{
     margin: 2vh 25% 2vh 25%;
     min-width: 500px;
-    display: flex;
 }
 
 .imageField {
@@ -143,4 +151,76 @@ code {
     height: auto;
     display: block;
     margin: 0 auto;
+}
+
+.finderStyle{
+    width: 20%;
+    max-width: 200px;
+    min-width: 140px;
+}
+
+.showBooksStyle{
+    min-width: 500px;
+    width: 60%;
+    display: flex;
+}
+
+.shopMainContainer{
+    width: 100%;
+    min-width: 600px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px 10px;
+}
+
+.shopCardStyle{
+    width: 100%;
+    max-width: 200px;
+    min-width: 100px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+}
+
+.shopCardStyle > * {
+    flex: 1;
+}
+
+.name-main-view-style {
+    height: auto;
+    min-height: 43px;
+    margin-block: 5px;
+    margin-bottom: 0px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    position: relative;
+    text-decoration: none;
+}
+
+.name-main-view-style:after {
+    background: linear-gradient(270deg, #fff 50%, #fff0);
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 20px;
+    position: absolute;
+    right: 0;
+    width: 24px;
+    z-index: 1;
+}
+
+.author-main-view-style{
+    overflow: hidden;
+    margin-top: 5px;
+    margin-bottom: 0px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    color: rgb(180, 180, 180);
+}
+
+.prise-main-view-style{
+    height: 20px;
+    margin-block: 3px;
 }
